fix style in content

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 
 .resume .resume_left {
   width: 280px;
-  background: #0bb5f4;
+  background: #02b711;
 }
 
 .resume .resume_left .resume_profile {
